# word-search

./: .gitignore  AGENTS.md  Makefile  README.md  __main__.py  pyproject.toml  requirements.txt
data/: animals.txt  animals_hard.txt  chinese_idioms.txt  chinese_pool.txt  chinese_pool_clean.txt  fruits.txt  geography.txt  meat.txt  nouns.txt  plants.txt  sports.txt  travel.txt
src/: MakeFile  WordSearch.py  chinese_pool_clean  clean.py  clean_chinese.py  main.py
tests/: test_application.py  test_domain.py  test_infrastructure.py
word_search/: __init__.py  __main__.py  config.py
word_search/application/: __init__.py  use_cases.py
word_search/domain/: __init__.py  entities.py  services.py  value_objects.py
word_search/infrastructure/: __init__.py  pdf_generator.py  word_repository.py
