[project]
name = "word-search"
version = "0.1.0"
description = "Word search puzzle generator"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=word_search --cov-report=term-missing"

[tool.coverage.run]
source = ["word_search"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["word_search"]

[tool.format]
skip-git-ignore = true
